--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<% include head.ejs %>
+
+<% include header.ejs %>
+
+    <div class="container"></div>
+
+<% include footer.ejs %>
