--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,9 +2,8 @@
 <body>
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="navbar-header">
-      <a class="navbar-brand" href="/">Fantasy Tweet League</a>
+      <a class="navbar-brand" href="/">FTL</a>
       <ul class="nav navbar-nav">
-        <li><a href="/how">Instructions</a></li>
       </ul>
   </div>
   </nav>
