Twitter button added

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,15 @@
 <% include head.ejs %>
-
+    <link rel="stylesheet" href="/stylesheets/bootstrap-social.css" />
+    <link rel="stylesheet" href="/stylesheets/font-awesome.css" />
 <% include header.ejs %>
 
     <div class="container">
         <div class="jumbotron">
         <h1>Fantasy Tweet League</h1>
-        <a href="/auth/twitter" class="btn btn-primary">Kick off with Twitter</a>
+        <a href="/auth/twitter" class="btn btn-social btn-twitter">
+            <i class="fa fa-twitter"></i>
+            Kick off with Twitter
+        </a>
         </div>
     </div>
 
