--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -6,3 +6,16 @@ body {
 a {
   color: #00B7FF;
 }
+
+.playerIcon {
+  border: 1px solid black;
+  width: 120px;
+  height: 120px;
+  text-align: center;
+}
+
+.playerIcon img {
+  width: 80px;
+  height: 80px;
+  border-radius: 40px;
+}
