--- a/views/pick.ejs
+++ b/views/pick.ejs
@@ -1,28 +1,25 @@
 <% include head.ejs %>
 
 <% include header.ejs %>
-   <p> <%=players.length  %></p>
     <div class="container">
         <div class="row">
-        <% for(i=0; i<4; i++) { %>
+            <% for(i=0; i < 8; i++) { %>
             <div class="col-md-3">
-                <div class="playerIcon">
-                    <img src="<%= players[i].pic %>" />
-                    <p><%= players[i].name %></p>
-                </div>
+                <div class="playerIcon"></div>
             </div>
-        <% } %>
+            <% } %>
         </div>
-
         <div class="row">
-        <% for(i=4; i<8; i++) { %>
+            <% for(i=0; i < players.length; i++) { %>
             <div class="col-md-3">
                 <div class="playerIcon">
-                    <img src="<%= players[i].pic %>" />
+                    <img src="<%= players[i].pic %>"/>
                     <p><%= players[i].name %></p>
                 </div>
             </div>
-        <% } %>
+            <% } %>
+        </div>
+        <div class="row">
         </div>
     </div>
 
