--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -12,21 +12,19 @@ a {
   width: 120px;
   height: 120px;
   text-align: center;
+  opacity: 0.8;
 }
 
-.playerIcon: hover {
+.playerIcon:hover {
   cursor: pointer;
+  opacity: 1.0;
 }
 
 .playerIcon img {
   width: 80px;
   height: 80px;
   border-radius: 40px;
-  opacity: 0.8;
-}
-
-.playerIcon img:hover {
-  opacity: 1.0;
+  border: none;
 }
 
 .gameIcon {
