--- a/views/head.ejs
+++ b/views/head.ejs
@@ -2,7 +2,7 @@
 <head>
     <title>Fantasy Tweet League</title>
     <link href="/stylesheets/bootstrap.css" rel="stylesheet">
-    <link href="/stylesheets/styles.css" rel="stylesheet">
+    <link href="/stylesheets/style.css" rel="stylesheet">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
