--- a/views/pick.ejs
+++ b/views/pick.ejs
@@ -2,25 +2,141 @@
 
 <% include header.ejs %>
     <div class="container">
-        <div class="row">
-            <% for(i=0; i < 8; i++) { %>
-            <div class="col-md-3">
-                <div class="playerIcon"></div>
-            </div>
+        <div class="stick-selected-players image-grid col-md-12">
+            <div class="">
+            <h3>Selected Players</h3>
+            <% for(var i=0; i<8; i++) {%>
+                <a>
+                    <div id="<%= i %>" class="player-selected">
+                        <img class="img-circle" src="" /> 
+                        <div class="player-name col-md-11"></div>
+                        <div class="player-cost col-md-1"></div>
+
+                    </div>
+                </a>
             <% } %>
-        </div>
-        <div class="row">
-            <% for(i=0; i < players.length; i++) { %>
-            <div class="col-md-3">
-                <div class="playerIcon">
-                    <img src="<%= players[i].pic %>"/>
-                    <p><%= players[i].name %></p>
-                </div>
             </div>
-            <% } %>
         </div>
-        <div class="row">
+        <div class="player-select-holder col-md-12">
+        <div class="image-grid-p col-md-7 col-md-offset-1">
+            <h3>Player Pool</h3>
+            <% for(var i=0; i<players.length; i++) {%>
+                <a>
+                    <div id="<%= players[i].id %>" class="player-unselected">
+                        <img class="img-circle" src="<%= players[i].pic %>" /> 
+                        <div class="player-name col-md-11"><%= players[i].name %></div>
+                        <div class="player-cost col-md-1"><%= players[i].cost %></div>
+                    </div>
+                </a>
+            <% } %>            
+        </div>
+
+        <form action="/teamSelect" method="post" id="player-form">
+            <input type="hidden" name="players" id="1" />
+            <input type="hidden" name="players" id="2" />
+            <input type="hidden" name="players" id="3" />
+            <input type="hidden" name="players" id="4" />
+            <input type="hidden" name="players" id="5" />
+            <input type="hidden" name="players" id="6" />
+            <input type="hidden" name="players" id="7" />
+            <input type="hidden" name="players" id="8" />
+        </form>
+
+        <div class="stick-right-col user-data col-md-2 center">
+            <button type="button" class="btn btn-primary btn-lg" id="battle">Battle</button>
+            <h4>Credits Remaining</h4>
+            <h4 id="user-amount">100<h4>
+            <h3></h3>
+        </div>
         </div>
     </div>
+    <script type="text/javascript">
 
+    $(function(){
+        $(window).scroll(function() {
+            if($(this).scrollTop!=0)
+                $(".image-grid").css("background: rgb(34, 34, 34)");
+            else
+                $(".image-grid").css("background: rgba(34, 34, 34, 0.5)");
+        });
+        var selectionCounter = 0, nextEmpty = -1, userTotal = 200;
+
+        $(".player-selected").hide();
+        $(".player-unselected").click(function(){
+
+            if(selectionCounter<8){
+                var id = $(this).attr('id');
+                var imageSrc = $(this).find("img").attr("src");
+                var playerName = $(this).find(".player-name").html();
+                var playerCost = $(this).find(".player-cost").html();
+                if(userTotal- (+playerCost) >= 0){
+                    var findNext = -1, tempNext = -1;
+                    while(tempNext===-1){
+                        findNext++;
+                        if(findNext>=8){
+                            findNext = 0;
+                        }
+                        var playerid = $("#"+findNext+".player-selected").attr("player-id");
+                        if(playerid===undefined || playerid===null || playerid===""){
+                            tempNext = findNext;
+                            
+                        }
+                        
+                    }
+                    nextEmpty=tempNext;
+                   
+                    $("#"+nextEmpty+".player-selected").show();
+                    $("#"+nextEmpty+".player-selected").attr("player-id", id);
+                    $("#"+nextEmpty+".player-selected img").attr("src", imageSrc);
+                    $("#"+nextEmpty+".player-selected .player-name").html(playerName);
+                    $("#"+nextEmpty+".player-selected .player-cost").html(playerCost);
+
+                    selectionCounter++;
+                    userTotal -= +playerCost;
+                    $("#user-amount").html(userTotal);
+                    $(this).closest("a").hide();
+                }
+                else{
+                    alert("Exceeds points total");
+                }
+            }
+            else{
+                alert("You have already chosen 5 players");
+            }
+
+        });
+        $(".player-selected").click(function(){
+            var playerId = $(this).attr("player-id");
+            $("#"+playerId+".player-unselected").closest("a").show();
+            
+            selectionCounter--;
+            var cost =  +$(this).find(".player-cost").html();
+            userTotal += cost;
+            $("#user-amount").html(userTotal);
+
+            console.log("Now nextEmpty"+nextEmpty)
+            $(this).find("img").attr("src","");
+            $(this).find("img").removeClass("img-circle").addClass("img-circle");
+            $(this).find(".player-name").html("");
+            $(this).find(".player-cost").html("");
+
+            $(this).attr("player-id","");
+
+        });
+        $("#battle").click(function(){
+            if(selectionCounter<8){
+                alert('Choose 5 players to complete the selection');
+            }
+            else{
+                for(var i=0;i<8;i++){
+                    var value = $("#"+i+".player-selected").attr("player-id");
+                    var formid = i+1;
+                    $("#player-form #"+formid).val(value);
+                }
+                $("#player-form").submit();
+            }
+        });
+    
+    });
+    </script>
 <% include footer.ejs %>
