--- a/views/wait.ejs
+++ b/views/wait.ejs
@@ -1,9 +1,13 @@
 <% include head.ejs %>
 
+<script src="/socket.io/socket.io.js"></script>
+<script src="/javascripts/waitsock.js"></script>
+
 <% include header.ejs %>
 
     <div class="container">
     	<img src="http://behindwoods.com/tamil-movies/slideshow/durai-english-ellam-pesudhu/images/vijay-thuppakki.jpg"/>
     </div>
+    <div id="hidden_form"></div>
 
 <% include footer.ejs %>
