--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,7 +1,7 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container">
   <div class="navbar-header">
       <a class="navbar-brand" href="/">FTL</a>
@@ -9,4 +9,4 @@
       </ul>
   </div>
   </div>
-  </nav>
+  </div>
