--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,9 +2,11 @@
     font-family: BPL;
     src: url('../fonts/Barclays Premier League.ttf');
 }
+
 body {
-    padding-top: 50px;
+    padding-top: 55px;
 }
+
 img.bg {
   /* Set rules to fill background */
   min-height: 100%;
@@ -115,9 +117,8 @@ img.bg {
 
 .image-grid-p {    
     margin-bottom: 20px;
-    width: 65%;
     list-style: none;
-    background: rgba(34, 34, 34, 0.5);
+    /*background: rgba(34, 34, 34, 0.5);*/
     color: #eee;
     height: 355px;
     overflow-y: scroll;
@@ -139,15 +140,19 @@ img.bg {
     
 }     
 
-.image-grid-p .player-name{
+.player-unselected .player-name{
     padding: 5px;
     font-family: 'BPL';
+    font-size: 12px;
+    color: #333;
 }
 
-.image-grid-p .player-cost{
+.player-unselected .player-cost{
     padding: 5px;
     font-family: 'BPL';
     text-align: right;
+    font-size: 12px;
+    color: #333;
 }
 
 .image-grid-p img{
@@ -158,91 +163,79 @@ img.bg {
     margin-left: 10px;
 }
 
-
-
-
-
-.image-grid {    
-    padding-bottom: 1px;
-    margin-bottom: 20px;
-    list-style: none;
-    background: rgba(34, 34, 34, 0.5);
-    color: #eee;
+.selectCont {
+    width: 100%;
+    height: 230px;
+    display: block;
+    border: 1px solid black;
+    color: #333;
 }
-.image-grid a {
-    height: 140px;
-    width: 160px;
-    cursor:pointer;
-    float: left;
-    padding: 0px;
-    margin: 0 -1px -1px 0;
-    font-size: 12px;
-    line-height: 1.4;
+
+.selectCont a .player-selected {
+    width: 120px;
+    height: 120px;
+    border: 1px solid #333;
     text-align: center;
-    border: 1px solid grey;
-    color: white;
-    text-decoration: none;
-    margin: 5px;
-}     
-
-.image-grid .player-name{
-    padding: 5px;
-    font-family: 'BPL';
+    padding-top: 5px;
+    margin: 0px 10px;
+    float: left;
 }
 
-.image-grid .player-cost{
-    padding: 5px;
-    font-family: 'BPL';
-    text-align: right;
+.financeData {
+    text-align: center;
 }
 
-.image-grid img{
+.selectCont a .player-selected:hover {
+    cursor: pointer;
+    opacity: 0.8;
+}
+
+.selectCont a .player-selected img {
+    width: 80px;
+    height: 80px;
+    border-radius: 40px;
+}
+
+.player-unselected {
+    float: left;
+    width: 160px;
+    height: 140px;
+    padding: 10px 10px;
+    margin: 10px 10px;
+    border: 1px solid black;
+    opacity: 0.8;
+    text-align: center;
+}
+
+.player-unselected:hover {
+    cursor: pointer;
+    opacity: 1.0;
+}
+
+.player-unselected img {
     width: 100px;
     height: 100px;
-} 
-.image-grid h3{
-    margin-left: 10px;
+    border-radius: 50px;
 }
 
-.user-data{
-    margin-top: 17px;
-    color:#ddd;
+.player-selected .player-name{
+    padding: 5px 0px;
     font-family: 'BPL';
-
-}
-.user-data #battle{
-    padding-left: 50px;
-    padding-right: 50px;
+    font-size: 11px;
+    color: #333;
 }
 
-.stick-header {
-    position:fixed; 
-    width:100%;
-    height:57px;
-    top:0px; 
-    left:0px;
-    display:block;
+.player-selected .player-cost{
+    font-family: 'BPL';
+    padding: 5px 0px;
+    font-size: 11px;
+    text-align: right;
+    color: #333;
 }
 
-.stick-selected-players {
-    position:fixed; 
-    width:100%;
-    height:220px;
-    left:0px;
-    display:block;
-    color: #eee;
-    background: rgba( 34, 34, 34, 0.8);
-    z-index:10;
-}
-
-.stick-right-col {
+.fixToTop {
     position: fixed;
-    top: 325px;
-    right:150px;
-}
-
-.player-select-holder {
-    margin-top: 225px;
+    top: 0;
 }
 
 .content-holder {
@@ -270,4 +263,77 @@ img.bg {
 
 .center {
     text-align: center;
+}
+
+.image-grid {    
+    padding-bottom: 1px;
+    margin-bottom: 20px;
+    list-style: none;
+    /*background: rgba(34, 34, 34, 0.5);*/
+    color: #eee;
+}
+.image-grid a {
+    height: 130px;
+    width: 150px;
+    cursor:pointer;
+    float: left;
+    padding: 10px;
+    margin: 0 -1px -1px 0;
+    font-size: 12px;
+    line-height: 1.4;
+    text-align: center;
+    border: 1px solid grey;
+    color: white;
+    text-decoration: none;
+    margin: 5px;
+}
+
+
+.image-grid img{
+    width: 70px;
+    height: 70px;
+} 
+.image-grid h3{
+    margin-left: 10px;
+}
+
+.user-data{
+    margin-top: 17px;
+    color:#ddd;
+    font-family: 'BPL';
+
+}
+.user-data #battle{
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.stick-header {
+    /*position:fixed; */
+    width:100%;
+    height:57px;
+    /*top:0px; 
+    left:0px;*/
+    display:block;
+}
+
+.stick-selected-players {
+    
+    width:100%;
+    /*height:240px;*/
+    /*left:0px;*/
+    display:block;
+    color: #eee;
+    background: rgba( 34, 34, 34, 0.8);
+    z-index:10;
+}
+
+.stick-right-col {
+    /*position: fixed;*/
+    top: 325px;
+    right:150px;
+}
+
+.player-select-holder {
+    margin-top: 225px;
 }
