--- a/views/pick.ejs
+++ b/views/pick.ejs
@@ -2,34 +2,28 @@
 
 <% include header.ejs %>
     <div class="container">
-        <div class="stick-selected-players image-grid col-md-12">
-            <div class="">
-            <h3>Selected Players</h3>
-            <% for(var i=0; i<8; i++) {%>
+        <div class="row">
+            <div class="col-md-12 selectCont">
+                <h3>Your Team</h3>
+                <% for(var i=0; i<8; i++) {%>
                 <a>
                     <div id="<%= i %>" class="player-selected">
                         <img class="img-circle" src="" /> 
                         <div class="player-name col-md-11"></div>
                         <div class="player-cost col-md-1"></div>
-
                     </div>
                 </a>
-            <% } %>
+                <% } %>
             </div>
         </div>
-        <div class="player-select-holder col-md-12">
-        <div class="image-grid-p col-md-7 col-md-offset-1">
-            <h3>Player Pool</h3>
-            <% for(var i=0; i<players.length; i++) {%>
-                <a>
-                    <div id="<%= players[i].id %>" class="player-unselected">
-                        <img class="img-circle" src="<%= players[i].pic %>" /> 
-                        <div class="player-name col-md-11"><%= players[i].name %></div>
-                        <div class="player-cost col-md-1"><%= players[i].cost %></div>
-                    </div>
-                </a>
-            <% } %>            
+        <div class="row">
+            <div class="col-md-12 financeData">
+                <h4>Cash Left:</h4>
+                <h4 id="user-amount">300</h4>
+                <button id="battle" class="btn btn-primary">Pick Team</button>
+            </div>
         </div>
+
 
         <form action="/teamSelect" method="post" id="player-form">
             <input type="hidden" name="players" id="1" />
@@ -42,22 +36,85 @@
             <input type="hidden" name="players" id="8" />
         </form>
 
-        <div class="stick-right-col user-data col-md-2 center">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-12">
+                    <h3 class="center">Player Pool</h3>
+                    <% for(var i=0; i<players.length; i++) {%>
+                    <a>
+                        <div id="<%= players[i].id %>" class="player-unselected">
+                            <img class="img-circle" src="<%= players[i].pic %>" /> 
+                            <div class="player-name col-md-11"><%= players[i].name %></div>
+                            <div class="player-cost col-md-1"><%= players[i].cost %></div>
+                        </div>
+                    </a>
+                    <% } %>        
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- <div class="container">
+        <div class="row">
+        <div class="stick-selected-players image-grid col-md-12">
+            <div>
+            <h3>Selected Players</h3>
+            <% for(var i=0; i<8; i++) {%>
+                <a>
+                    <div id="<%= i %>" class="player-selected">
+                        <img class="img-circle" src="" /> 
+                        <div class="player-name col-md-11"></div>
+                        <div class="player-cost col-md-1"></div>
+                    </div>
+                </a>
+            <% } %>
+            </div>
+        </div>
+        </div>
+        
+        <div class="row">
+        <div class="col-md-12">
+        <div class="image-grid-p col-md-12">
+            <h3>Player Pool</h3>
+            <% for(var i=0; i<players.length; i++) {%>
+                <a>
+                    <div id="<%= players[i].id %>" class="player-unselected">
+                        <img class="img-circle" src="<%= players[i].pic %>" /> 
+                        <div class="player-name col-md-11"><%= players[i].name %></div>
+                        <div class="player-cost col-md-1"><%= players[i].cost %></div>
+                    </div>
+                </a>
+            <% } %>            
+        </div>
+        </div>
+
+        <form action="/teamSelect" method="post" id="player-form">
+            <input type="hidden" name="players" id="1" />
+            <input type="hidden" name="players" id="2" />
+            <input type="hidden" name="players" id="3" />
+            <input type="hidden" name="players" id="4" />
+            <input type="hidden" name="players" id="5" />
+            <input type="hidden" name="players" id="6" />
+            <input type="hidden" name="players" id="7" />
+            <input type="hidden" name="players" id="8" />
+        </form>
+        </div>
+        <div class="row">
+        <div class="col-md-12">
             <button type="button" class="btn btn-primary btn-lg" id="battle">Battle</button>
             <h4>Credits Remaining</h4>
             <h4 id="user-amount">300<h4>
             <h3></h3>
         </div>
         </div>
-    </div>
+    </div> -->
     <script type="text/javascript">
 
     $(function(){
         $(window).scroll(function() {
             if($(this).scrollTop!=0)
-                $(".image-grid").css("background: rgb(34, 34, 34)");
+                $(".selectCont").css("background: rgb(34, 34, 34)");
             else
-                $(".image-grid").css("background: rgba(34, 34, 34, 0.5)");
+                $(".selectCont").css("background: rgba(34, 34, 34, 0.5)");
         });
         var selectionCounter = 0, nextEmpty = -1, userTotal = 300;
 
@@ -101,7 +158,7 @@
                 }
             }
             else{
-                alert("You have already chosen 5 players");
+                alert("You have already chosen 8 players");
             }
 
         });
@@ -125,7 +182,7 @@
         });
         $("#battle").click(function(){
             if(selectionCounter<8){
-                alert('Choose 5 players to complete the selection');
+                alert('Choose 8 players to complete the selection');
             }
             else{
                 for(var i=0;i<8;i++){
