--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,11 +29,221 @@ img.bg {
   }
 }
 
-.vote {
-    float: right;
-    padding: 15px 15px;
+
+.player-unselected .player-name{
+    padding: 5px;
+    font-family: 'BPL';
+    font-size: 12px;
+    color: #333;
 }
 
+.player-unselected .player-cost{
+    padding: 5px;
+    font-family: 'BPL';
+    text-align: right;
+    font-size: 12px;
+    color: #333;
+}
+
+.image-grid-p img{
+    width: 100px;
+    height: 100px;
+} 
+.image-grid-p h3{
+    margin-left: 10px;
+}
+
+.selectCont {
+    width: 100%;
+    height: 230px;
+    display: block;
+    border: 1px solid black;
+    color: #333;
+}
+
+.selectCont a .player-selected {
+    width: 120px;
+    height: 120px;
+    border: 1px solid #333;
+    text-align: center;
+    padding-top: 5px;
+    margin: 0px 10px;
+    float: left;
+}
+
+.financeData {
+    text-align: center;
+}
+
+.selectCont a .player-selected:hover {
+    cursor: pointer;
+    opacity: 0.8;
+}
+
+.selectCont a .player-selected img {
+    width: 80px;
+    height: 80px;
+    border-radius: 40px;
+}
+
+.player-unselected {
+    float: left;
+    width: 160px;
+    height: 140px;
+    padding: 10px 10px;
+    margin: 10px 10px;
+    border: 1px solid black;
+    opacity: 0.8;
+    text-align: center;
+}
+
+.player-unselected:hover {
+    cursor: pointer;
+    opacity: 1.0;
+}
+
+.player-unselected img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+}
+
+.player-selected .player-name{
+    padding: 5px 0px;
+    font-family: 'BPL';
+    font-size: 11px;
+    color: #333;
+}
+
+.player-selected .player-cost{
+    font-family: 'BPL';
+    padding: 5px 0px;
+    font-size: 11px;
+    text-align: right;
+    color: #333;
+}
+
+#banner {
+    font-family: 'BPL';
+    text-align: center;
+    font-size: 25px;
+}
+
+.gameIcon {
+    float: right;
+}
+
+.gameIcon img {
+    width: 70px;
+    height: 70px;
+}
+
+.gameIcon .player-name {
+    text-align: center;
+    font-family: 'BPL';
+}
+
+.gameIcon .player-count {
+    text-align: center;
+    font-family: 'BPL';
+}
+
+.center {
+    text-align: center;
+}
+
+.plFont {
+    font-family: 'BPL';
+}
+
+
+
+
+.sign-in-img{
+    border-radius: 25px;
+    vertical-align: middle;
+    height: 200px;
+    width: 200px;
+}
+
+.waitease {
+    text-align: center;
+    font-family: 'BPL';
+    margin-top: 100px;
+}
+
+.image-grid {    
+    padding-bottom: 1px;
+    margin-bottom: 20px;
+    list-style: none;
+    /*background: rgba(34, 34, 34, 0.5);*/
+    color: #eee;
+}
+.image-grid a{
+    height: 130px;
+    width: 150px;
+    cursor:pointer;
+    float: left;
+    padding: 10px;
+    margin: 0 -1px -1px 0;
+    font-size: 12px;
+    line-height: 1.4;
+    text-align: center;
+    border: 1px solid grey;
+    color: white;
+    text-decoration: none;
+    margin: 5px;
+}
+
+
+.image-grid img{
+    width: 70px;
+    height: 70px;
+} 
+.image-grid h3{
+    margin-left: 10px;
+}
+
+.user-data{
+    margin-top: 17px;
+    color:#ddd;
+    font-family: 'BPL';
+
+}
+.user-data #battle{
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.stick-header {
+    /*position:fixed; */
+    width:100%;
+    height:57px;
+    /*top:0px; 
+    left:0px;*/
+    display:block;
+}
+
+.stick-selected-players {
+    
+    width:100%;
+    /*height:240px;*/
+    /*left:0px;*/
+    display:block;
+    color: #eee;
+    background: rgba( 34, 34, 34, 0.8);
+    z-index:10;
+}
+
+.stick-right-col {
+    /*position: fixed;*/
+    top: 325px;
+    right:150px;
+}
+
+.player-select-holder {
+    margin-top: 225px;
+}
 .teamDiv {
     background: #4c7f69;
     /*background: ;*/
@@ -138,202 +348,4 @@ img.bg {
     text-decoration: none;
     margin: 5px;
     
-}     
-
-.player-unselected .player-name{
-    padding: 5px;
-    font-family: 'BPL';
-    font-size: 12px;
-    color: #333;
-}
-
-.player-unselected .player-cost{
-    padding: 5px;
-    font-family: 'BPL';
-    text-align: right;
-    font-size: 12px;
-    color: #333;
-}
-
-.image-grid-p img{
-    width: 100px;
-    height: 100px;
-} 
-.image-grid-p h3{
-    margin-left: 10px;
-}
-
-.selectCont {
-    width: 100%;
-    height: 230px;
-    display: block;
-    border: 1px solid black;
-    color: #333;
-}
-
-.selectCont a .player-selected {
-    width: 120px;
-    height: 120px;
-    border: 1px solid #333;
-    text-align: center;
-    padding-top: 5px;
-    margin: 0px 10px;
-    float: left;
-}
-
-.financeData {
-    text-align: center;
-}
-
-.selectCont a .player-selected:hover {
-    cursor: pointer;
-    opacity: 0.8;
-}
-
-.selectCont a .player-selected img {
-    width: 80px;
-    height: 80px;
-    border-radius: 40px;
-}
-
-.player-unselected {
-    float: left;
-    width: 160px;
-    height: 140px;
-    padding: 10px 10px;
-    margin: 10px 10px;
-    border: 1px solid black;
-    opacity: 0.8;
-    text-align: center;
-}
-
-.player-unselected:hover {
-    cursor: pointer;
-    opacity: 1.0;
-}
-
-.player-unselected img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
-}
-
-.player-selected .player-name{
-    padding: 5px 0px;
-    font-family: 'BPL';
-    font-size: 11px;
-    color: #333;
-}
-
-.player-selected .player-cost{
-    font-family: 'BPL';
-    padding: 5px 0px;
-    font-size: 11px;
-    text-align: right;
-    color: #333;
-}
-
-.fixToTop {
-    position: fixed;
-    top: 0;
-}
-
-.content-holder {
-    margin-top: 57px;
-}
-
-.sign-in-img{
-    border-radius: 25px;
-    vertical-align: middle;
-    height: 200px;
-    width: 200px;
-}
-
-.waitease {
-    text-align: center;
-    font-family: 'BPL';
-    margin-top: 100px;
-}
-
-.footer {
-    position: fixed;
-    bottom:0px;
-    left: 0px;
-}
-
-.center {
-    text-align: center;
-}
-
-.image-grid {    
-    padding-bottom: 1px;
-    margin-bottom: 20px;
-    list-style: none;
-    /*background: rgba(34, 34, 34, 0.5);*/
-    color: #eee;
-}
-.image-grid a {
-    height: 130px;
-    width: 150px;
-    cursor:pointer;
-    float: left;
-    padding: 10px;
-    margin: 0 -1px -1px 0;
-    font-size: 12px;
-    line-height: 1.4;
-    text-align: center;
-    border: 1px solid grey;
-    color: white;
-    text-decoration: none;
-    margin: 5px;
-}
-
-
-.image-grid img{
-    width: 70px;
-    height: 70px;
-} 
-.image-grid h3{
-    margin-left: 10px;
-}
-
-.user-data{
-    margin-top: 17px;
-    color:#ddd;
-    font-family: 'BPL';
-
-}
-.user-data #battle{
-    padding-left: 50px;
-    padding-right: 50px;
-}
-
-.stick-header {
-    /*position:fixed; */
-    width:100%;
-    height:57px;
-    /*top:0px; 
-    left:0px;*/
-    display:block;
-}
-
-.stick-selected-players {
-    
-    width:100%;
-    /*height:240px;*/
-    /*left:0px;*/
-    display:block;
-    color: #eee;
-    background: rgba( 34, 34, 34, 0.8);
-    z-index:10;
-}
-
-.stick-right-col {
-    /*position: fixed;*/
-    top: 325px;
-    right:150px;
-}
-
-.player-select-holder {
-    margin-top: 225px;
 }
