--- a/views/headtohead.ejs
+++ b/views/headtohead.ejs
@@ -7,20 +7,25 @@
 
     <div class="container">
         <div class="row">
-            <div id="banner"></div>
+            <div id="banner">60</div>
         </div>
         <div class="row">
-            <div class="col-md-offset-3 col-md-6" class="gameSpace">
+            <div class="col-md-offset-2 col-md-8" class="gameSpace">
+                <h3 class="pull-left plFont"><%= user.username %></h3>
+                <h3 class="pull-right plFont"><%= opponent.username %></h3>
+                <div class="row"></div>
                 <% for(i=0; i<5; i++) { %>
-                <div class="gameIcon" id="t1p<%= i %>">
-                    <img src="<%= user.team[i].pic %>"/>
-                    <p><%= user.team[i].name %></p>
-                    <p id="t1p<%= i %>s">0</p>
-                </div>
-                <div class="gameIcon" id="t2p<%= i %>">
-                    <img src="<%= opponent.team[i].pic %>"/>
-                    <p><%= opponent.team[i].name %></p>
-                    <p id="t2p<%= i %>s">0</p>
+                <div class="row">
+                    <div class="gameIcon pull-right" id="t1p<%= i %>">
+                        <img class="img-circle" src="<%= user.team[i].pic %>"/>
+                        <div class="player-name"><%= user.team[i].name %></div>
+                        <div class="player-count" id="t1p<%= i %>s" class="user.team[i].id">0</div>
+                    </div>
+                    <div class="gameIcon pull-right" id="t2p<%= i %>">
+                        <img class="img-circle" src="<%= opponent.team[i].pic %>"/>
+                        <div class="player-name"><%= opponent.team[i].name %></div>
+                        <div class="player-count" id="t2p<%= i %>s" class="opponent.team[i].id">0</div>
+                    </div>
                 </div>
                 <% } %>
             </div>
