Minor alignment glitch fixed

--- a/views/headtohead.ejs
+++ b/views/headtohead.ejs
@@ -16,7 +16,7 @@
                 <div class="row"></div>
                 <% for(i=0; i<5; i++) { %>
                 <div class="row">
-                    <div class="gameIcon pull-right" id="t1p<%= i %>">
+                    <div class="gameIcon pull-left" id="t1p<%= i %>">
                         <img class="img-circle" src="<%= user.team[i].pic %>"/>
                         <div class="player-name"><%= user.team[i].name %></div>
                         <div class="player-count" id="t1p<%= i %>s" class="user.team[i].id">0</div>
