--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -56,6 +56,7 @@ img.bg {
 .selectCont {
     width: 100%;
     height: 230px;
+    margin-bottom: 10px;
     display: block;
     border: 1px solid black;
     color: #333;
