--- a/views/headtohead.ejs
+++ b/views/headtohead.ejs
@@ -1,6 +1,8 @@
 <% include head.ejs %>
 
 <script src="/socket.io/socket.io.js"></script>
+<script src="/javascripts/flipclock.min.js"></script>
+<link href="/stylesheets/flipclock.css" rel="stylesheet">
 <script src="/javascripts/battlesock.js"></script>
 
 <% include header.ejs %>
