--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -150,7 +150,12 @@ img.bg {
 }
 
 .center {
-    text-align: center;
+    text-align: center;    
+}
+
+.center-align {
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .plFont {
@@ -349,4 +354,8 @@ img.bg {
     text-decoration: none;
     margin: 5px;
     
+}
+
+.leaderboard {
+    width: 400px;
 }
