--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,6 +6,10 @@
   <div class="navbar-header">
       <a class="navbar-brand" href="/">FTL</a>
       <ul class="nav navbar-nav">
+      <% if(user) { %>
+      <li><a href="/leaderboard">Leaderboard</a></li>
+      <li><a href="/dash">Dashboard</a></li>
+      <% } %>
       </ul>
   </div>
   </div>
