--- a/views/headtohead.ejs
+++ b/views/headtohead.ejs
@@ -10,6 +10,7 @@
     <div class="container">
         <div class="row">
             <div id="banner">60</div>
+            <button id="toDash" disabled="disabled" class="btn btn-primary">Dashboard</button>
         </div>
         <div class="row">
             <div class="col-md-offset-2 col-md-8" class="gameSpace">
