Style Changes made

--- a/views/dash.ejs
+++ b/views/dash.ejs
@@ -4,8 +4,8 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-12 selectCont">
-                <h3>My Starting 5</h3>
+            <div class="col-md-12 dashSelectCont">
+                <h3>My Starting 5 (Order Matters)</h3>
                 <% for(var i=0; i<5; i++) { %>
                 <a>
                     <div id="<%= i %>" class="player-selected">
@@ -36,7 +36,7 @@
         </form>
 
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 squadCont">
                 <h3 class="center">My Squad</h3>
                 <% for(var i=0; i<8; i++) { %>
                 <a>
