--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,7 +5,8 @@
 
 body {
     padding-top: 55px;
-    background-image: url('../fonts/football.png');    
+    background-image: url('../fonts/football.png');
+    background-attachment: fixed;
 }
 
 img.bg {
@@ -34,8 +35,8 @@ img.bg {
 .player-unselected .player-name{
     padding: 5px;
     font-family: 'BPL';
-    font-size: 12px;
-    color: #333;
+    font-size: 14px;
+    color: #000;
 }
 
 .player-unselected .player-cost{
@@ -43,7 +44,7 @@ img.bg {
     font-family: 'BPL';
     text-align: right;
     font-size: 12px;
-    color: #333;
+    color: #000;
 }
 
 .image-grid-p img{
@@ -59,22 +60,18 @@ img.bg {
     height: 230px;
     margin-bottom: 10px;
     display: block;
-    border: 1px solid black;
-    color: #333;
+    border-radius: 30px;
+    color: #000;
+    background: rgba(230, 230, 230, 0.5);
 }
 
 .selectCont a .player-selected {
     width: 120px;
     height: 120px;
-    border: 1px solid #333;
     text-align: center;
     padding-top: 5px;
     margin: 0px 10px;
     float: left;
-}
-
-.financeData {
-    text-align: center;
 }
 
 .selectCont a .player-selected:hover {
@@ -88,13 +85,47 @@ img.bg {
     border-radius: 40px;
 }
 
+.dashSelectCont {
+    width: 100%;
+    height: 230px;
+    margin-bottom: 10px;
+    display: block;
+    color: #333;
+    border-radius: 30px;
+    background: rgba(230, 230, 230, 0.5);
+}
+
+.dashSelectCont a .player-selected {
+    width: 150px;
+    height: 130px;
+    text-align: center;
+    padding-top: 5px;
+    margin: 0px 10px;
+    float: left;
+}
+
+.dashSelectCont a .player-selected:hover {
+    cursor: pointer;
+    opacity: 0.8;
+}
+
+.dashSelectCont a .player-selected img {
+    width: 100px;
+    height: 100px;
+}
+
+.financeData {
+    text-align: center;
+    color: #000;
+    font-family: 'BPL';
+}
+
 .player-unselected {
     float: left;
     width: 160px;
     height: 140px;
     padding: 10px 10px;
     margin: 10px 10px;
-    border: 1px solid black;
     opacity: 0.8;
     text-align: center;
 }
@@ -114,7 +145,7 @@ img.bg {
     padding: 5px 0px;
     font-family: 'BPL';
     font-size: 11px;
-    color: #333;
+    color: #000;
 }
 
 .player-selected .player-cost{
@@ -122,7 +153,7 @@ img.bg {
     padding: 5px 0px;
     font-size: 11px;
     text-align: right;
-    color: #333;
+    color: #000;
 }
 
 #banner {
@@ -161,6 +192,11 @@ img.bg {
 
 .plFont {
     font-family: 'BPL';
+}
+
+.squadCont {
+    background: rgba(230, 230, 230, 0.5);
+    border-radius: 30px;
 }
 
 .fadeOut {
