--- a/views/pick.ejs
+++ b/views/pick.ejs
@@ -19,8 +19,8 @@
         </div>
         <div class="row">
             <div class="col-md-12 financeData">
-                <h4>Cash Left:</h4>
-                <h4 id="user-amount">300</h4>
+                <h3>Cash Left:</h3>
+                <h3 id="user-amount">175</h3>
                 <button id="battle" class="btn btn-primary">Pick Team</button>
             </div>
         </div>
@@ -39,7 +39,7 @@
         </form>
 
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 squadCont">
                 <h3 class="center">Player Pool</h3>
                 <% for(var i=0; i<players.length; i++) { %>
                 <a>
@@ -63,7 +63,7 @@
             else
                 $(".selectCont").css("background: rgba(34, 34, 34, 0.5)");
         });
-        var selectionCounter = 0, nextEmpty = -1, userTotal = 300;
+        var selectionCounter = 0, nextEmpty = -1, userTotal = 175;
 
         $(".player-selected").hide();
         $(".player-unselected").click(function(){
