--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,7 +6,7 @@
   <div class="navbar-header">
       <a class="navbar-brand" href="/">FTL</a>
       <ul class="nav navbar-nav">
-      <% if(user) { %>
+      <% if(user && reqd) { %>
       <li><a href="/leaderboard">Leaderboard</a></li>
       <li><a href="/dash">Dashboard</a></li>
       <% } %>
