--- a/views/wait.ejs
+++ b/views/wait.ejs
@@ -5,7 +5,7 @@
 
 <% include header.ejs %>
 
-    <div class="container">
+    <div class="container center">
     	<img src="http://behindwoods.com/tamil-movies/slideshow/durai-english-ellam-pesudhu/images/vijay-thuppakki.jpg"/>
     </div>
     <div id="hidden_form"></div>
