--- a/views/leaderboard.ejs
+++ b/views/leaderboard.ejs
@@ -2,7 +2,7 @@
 
 <% include header.ejs %>
 <h2 style="text-align:center">Leaderboard</h2>
-<table class="table table-striped leaderboard center-align" >
+<table class="table borderless table-hover leaderboard center-align" >
 <tr><th>Rank</th><th>Profile </th><th>Winning Streak</th></tr>
 <% for (var i=0; i<items.length; i++) { %>
     <tr><td><%=i+1%></td><td><a href="http://twitter.com/<%=items[i].username%>"><img src="<%=items[i].photo%>"/></a> <%=items[i].username%></td><td><%=items[i].winStreak%></td></tr>
