--- a/views/headtohead.ejs
+++ b/views/headtohead.ejs
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="row">
             <div id="banner">60</div>
-            <button id="toDash" disabled="disabled" class="btn btn-primary">Dashboard</button>
+            <a id="toDash" href="/dash" disabled="disabled" class="btn btn-primary center">Dashboard</a>
         </div>
         <div class="row">
             <div class="col-md-offset-2 col-md-8" class="gameSpace">
