--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -414,8 +414,14 @@ img.bg {
     
 }
 
+.leaderboard td , .leaderboard th{
+    vertical-align: middle !important;
+    border: none !important;
+}
+
 .leaderboard {
-    width: 400px;
-    border-radius: 5px;
-    background-color: rgba(230,230,230,0.6);
+    width: 500px;
+    border-radius: 15px;
+    vertical-align: center;
+    background-color: rgba(230,230,230,0.65);
 }
