--- a/views/pick.ejs
+++ b/views/pick.ejs
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="col-md-12 financeData">
                 <h3>Cash Left:</h3>
-                <h3 id="user-amount">175</h3>
+                <h3 id="user-amount">180</h3>
                 <button id="battle" class="btn btn-primary">Pick Team</button>
             </div>
         </div>
@@ -63,7 +63,7 @@
             else
                 $(".selectCont").css("background: rgba(34, 34, 34, 0.5)");
         });
-        var selectionCounter = 0, nextEmpty = -1, userTotal = 175;
+        var selectionCounter = 0, nextEmpty = -1, userTotal = 18-;
 
         $(".player-selected").hide();
         $(".player-unselected").click(function(){
