changed bg to jpg

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,7 +5,7 @@
 
 body {
     padding-top: 55px;
-    background-image: url('../fonts/football.png');
+    background-image: url('../fonts/football.jpg');
     background-attachment: fixed;
 }
 
