--- a/views/pick.ejs
+++ b/views/pick.ejs
@@ -63,7 +63,7 @@
             else
                 $(".selectCont").css("background: rgba(34, 34, 34, 0.5)");
         });
-        var selectionCounter = 0, nextEmpty = -1, userTotal = 18-;
+        var selectionCounter = 0, nextEmpty = -1, userTotal = 180;
 
         $(".player-selected").hide();
         $(".player-unselected").click(function(){
