--- a/views/dash.ejs
+++ b/views/dash.ejs
@@ -50,7 +50,10 @@
             </div>
         </div>
     </div>
-
+    <img class="hide" src="/img/allianzArenaRed.jpg">
+    <img class="hide" src="/img/AllianzArenaWide.jpg">
+    <img class="hide" src="/img/stamfordBridgeAerial.jpg">
+    <img class="hide" src="/img/emirates-by-night.jpg">
     <script type="text/javascript">
         $(function() {
             var selectionCounter = 0, nextEmpty = -1;
