--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,16 +1,28 @@
 <% include head.ejs %>
     <link rel="stylesheet" href="/stylesheets/bootstrap-social.css" />
     <link rel="stylesheet" href="/stylesheets/font-awesome.css" />
-<% include header.ejs %>
-
-    <div class="container">
+    <link href='http://fonts.googleapis.com/css?family=Playfair+Display+SC' rel='stylesheet' type='text/css'>
+    </head>
+    <div class="container picDiv">
         <div class="jumbotron">
         <h1>Fantasy Tweet League</h1>
-        <a href="/auth/twitter" class="btn btn-social btn-twitter">
+        <a href="/auth/twitter" class="btn btn-lg btn-social btn-twitter">
             <i class="fa fa-twitter"></i>
             Kick off with Twitter
         </a>
         </div>
     </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras condimentum magna est, vitae vulputate neque rutrum vel. Aliquam consequat orci quis vehicula ultrices. Quisque tristique augue justo, a pretium orci sollicitudin sed. Aenean interdum mattis mauris, quis ullamcorper ipsum rhoncus eu. Quisque euismod magna lectus, non gravida ligula varius id. Curabitur eget molestie elit. Duis at libero vitae elit mattis rutrum. Maecenas aliquam nisi nec nisi fermentum lacinia. Duis facilisis eu enim nec interdum. Cras blandit fringilla velit quis ullamcorper. Nulla facilisi. Maecenas tincidunt sodales justo ut scelerisque. Phasellus non tortor ligula. Phasellus id justo est. Ut at faucibus eros, a eleifend tellus. Donec lacinia id metus vitae aliquet.</p></div>
+            <div class="col-md-4"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras condimentum magna est, vitae vulputate neque rutrum vel. Aliquam consequat orci quis vehicula ultrices. Quisque tristique augue justo, a pretium orci sollicitudin sed. Aenean interdum mattis mauris, quis ullamcorper ipsum rhoncus eu. Quisque euismod magna lectus, non gravida ligula varius id. Curabitur eget molestie elit. Duis at libero vitae elit mattis rutrum. Maecenas aliquam nisi nec nisi fermentum lacinia. Duis facilisis eu enim nec interdum. Cras blandit fringilla velit quis ullamcorper. Nulla facilisi. Maecenas tincidunt sodales justo ut scelerisque. Phasellus non tortor ligula. Phasellus id justo est. Ut at faucibus eros, a eleifend tellus. Donec lacinia id metus vitae aliquet.</p></div>
+            <div class="col-md-4"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras condimentum magna est, vitae vulputate neque rutrum vel. Aliquam consequat orci quis vehicula ultrices. Quisque tristique augue justo, a pretium orci sollicitudin sed. Aenean interdum mattis mauris, quis ullamcorper ipsum rhoncus eu. Quisque euismod magna lectus, non gravida ligula varius id. Curabitur eget molestie elit. Duis at libero vitae elit mattis rutrum. Maecenas aliquam nisi nec nisi fermentum lacinia. Duis facilisis eu enim nec interdum. Cras blandit fringilla velit quis ullamcorper. Nulla facilisi. Maecenas tincidunt sodales justo ut scelerisque. Phasellus non tortor ligula. Phasellus id justo est. Ut at faucibus eros, a eleifend tellus. Donec lacinia id metus vitae aliquet.</p></div>
+        </div>
+        <div class="row">
+            <div class="col-md-4"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras condimentum magna est, vitae vulputate neque rutrum vel. Aliquam consequat orci quis vehicula ultrices. Quisque tristique augue justo, a pretium orci sollicitudin sed. Aenean interdum mattis mauris, quis ullamcorper ipsum rhoncus eu. Quisque euismod magna lectus, non gravida ligula varius id. Curabitur eget molestie elit. Duis at libero vitae elit mattis rutrum. Maecenas aliquam nisi nec nisi fermentum lacinia. Duis facilisis eu enim nec interdum. Cras blandit fringilla velit quis ullamcorper. Nulla facilisi. Maecenas tincidunt sodales justo ut scelerisque. Phasellus non tortor ligula. Phasellus id justo est. Ut at faucibus eros, a eleifend tellus. Donec lacinia id metus vitae aliquet.</p></div>
+            <div class="col-md-4"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras condimentum magna est, vitae vulputate neque rutrum vel. Aliquam consequat orci quis vehicula ultrices. Quisque tristique augue justo, a pretium orci sollicitudin sed. Aenean interdum mattis mauris, quis ullamcorper ipsum rhoncus eu. Quisque euismod magna lectus, non gravida ligula varius id. Curabitur eget molestie elit. Duis at libero vitae elit mattis rutrum. Maecenas aliquam nisi nec nisi fermentum lacinia. Duis facilisis eu enim nec interdum. Cras blandit fringilla velit quis ullamcorper. Nulla facilisi. Maecenas tincidunt sodales justo ut scelerisque. Phasellus non tortor ligula. Phasellus id justo est. Ut at faucibus eros, a eleifend tellus. Donec lacinia id metus vitae aliquet.</p></div>
+            <div class="col-md-4"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras condimentum magna est, vitae vulputate neque rutrum vel. Aliquam consequat orci quis vehicula ultrices. Quisque tristique augue justo, a pretium orci sollicitudin sed. Aenean interdum mattis mauris, quis ullamcorper ipsum rhoncus eu. Quisque euismod magna lectus, non gravida ligula varius id. Curabitur eget molestie elit. Duis at libero vitae elit mattis rutrum. Maecenas aliquam nisi nec nisi fermentum lacinia. Duis facilisis eu enim nec interdum. Cras blandit fringilla velit quis ullamcorper. Nulla facilisi. Maecenas tincidunt sodales justo ut scelerisque. Phasellus non tortor ligula. Phasellus id justo est. Ut at faucibus eros, a eleifend tellus. Donec lacinia id metus vitae aliquet.</p></div>
+        </div>
 
+    </div>
 <% include footer.ejs %>
