--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,10 +3,39 @@
     src: url('../fonts/Barclays Premier League.ttf');
 }
 
-body {
-    padding-top: 55px;
-    background-image: url('../fonts/football.jpg');
-    background-attachment: fixed;
+.picDiv {
+    width: 100%;
+    height: 100%;
+    background-image: url('../img/nou-camp.jpg');
+    background-size: cover;
+}
+
+body.navOn {
+    padding-top: 65px;
+    /*background-image: url('../img/stamfordBridgeAerial.jpg');*/
+    background-size: cover;
+}
+
+.img0 {
+    background-image: url('../img/allianzArenaRed.jpg');
+    transition: background-image 1s linear;
+}
+.img1 {
+    background-image: url('../img/AllianzArenaWide.jpg');
+    transition: background-image 1s linear;
+}
+.img2 {
+    background-image: url('../img/emirates-by-night.jpg');
+    transition: background-image 1s linear;
+}
+.img3 {
+    background-image: url('../img/stamfordBridgeAerial.jpg');
+    transition: background-image 1s linear;
+}
+
+img.hide {
+    height: 0;
+    width: 0;
 }
 
 img.bg {
