--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,16 +1,15 @@
 </head>
-<body>
-
+<% if(user && reqd) { %>
+<body class="navOn img1">
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-  <div class="container">
   <div class="navbar-header">
       <a class="navbar-brand" href="/">FTL</a>
+      
       <ul class="nav navbar-nav">
-      <% if(user && reqd) { %>
       <li><a href="/leaderboard">Leaderboard</a></li>
       <li><a href="/dash">Dashboard</a></li>
-      <% } %>
       </ul>
   </div>
+    <a class="navbar-brand pull-right" href="#"><%= user.username %></a>
   </div>
-  </div>
+<% } %>
